@@ -13,8 +13,12 @@ Bundle-Name: Joda-Time
 Bundle-SymbolicName: joda-time
 Bundle-Version: 2.0
 Export-Package: org.joda.time;version=2.0,
+ org.joda.time.base;version=2.0,
  org.joda.time.chrono;version=2.0,
- org.joda.time.format;version=2.0
+ org.joda.time.convert;version=2.0,
+ org.joda.time.field;version=2.0,
+ org.joda.time.format;version=2.0,
+ org.joda.time.tz;version=2.0
 Bundle-License: Apache 2.0
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Bundle-DocURL: http://joda-time.sourceforge.net/
