@@ -34,7 +34,7 @@ package while the format package will be of interest for formatting.
 <p>
 Joda-Time is standalone and has no dependencies other than JDK 1.5.
 (The jar file may work on older JDK versions, but it is untested.)
-It is licenced under the Apache Licnese Version 2.0.
+It is licensed under the Apache License Version 2.0.
 </p>
 </body>
 </html>
