@@ -58,7 +58,7 @@
       <item name="Joda home" href="http://joda.sourceforge.net"/>
       <item name="Money" href="http://joda-money.sourceforge.net/index.html"/>
       <item name="Primitives" href="http://joda-primitives.sourceforge.net/index.html"/>
-      <item name="Beans" href="http://joda.sourceforge.net/beans.html"/>
+      <item name="Beans" href="http://joda-beans.sourceforge.net/index.html"/>
     </menu>
     
     <footer>
