@@ -14,8 +14,10 @@
 A number of libraries and applications are now built using Joda-Time.
 </p>
 <ul>
-<li><a href="http://joda-time.sourceforge.net/contrib/hibernate/index.html">Hibernate support</a>
+<li><a href="http://usertype.sourceforge.net/">Extended Hibernate support</a>
 A set of classes to link Joda-Time to databases using Hibernate.</li>
+<li><a href="http://joda-time.sourceforge.net/contrib/hibernate/index.html">Original Hibernate support</a>
+The original set of classes to link Joda-Time to databases using Hibernate (UserType project is newer and better maintained).</li>
 <li><a href="http://joda-time.sourceforge.net/contrib/jsptags/index.html">JSP tag support</a>
 A tag library in the style of JSTL to allow Joda-Time classes to be used in JSP.</li>
 <li><a href="http://joda-time.sourceforge.net/contrib/i18n/index.html">I18N support</a>
